--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/database
+MONGO_URI="mongodb+srv://abhishek1:ztrf05eyYgsWO43H@cluster0.jpxnawv.mongodb.net/atulyakarigari"
+# mongodb://localhost:27017/database
 JWT_SECRET=phr-ryt-secret-key
